12-GatewayAPI/manifests/07-httproute-a.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-a-route
  namespace: lab-gateway-demo
spec:
  parentRefs:
    - name: gateway-app-a
      namespace: openshift-ingress
  hostnames:
    - "app-a.gwapi.example.com"
  rules:
    - backendRefs:
        - name: app-a
          port: 8080
