12-GatewayAPI/manifests/08-httproute-b.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app-b-route
  namespace: lab-gateway-demo
spec:
  parentRefs:
    - name: gateway-app-b
      namespace: openshift-ingress
  hostnames:
    - "app-b.gwapi.example.com"
  rules:
    - backendRefs:
        - name: app-b
          port: 8080
